--- a/teil1.tex
+++ b/teil1.tex
@@ -21,3 +21,39 @@ $\Longrightarrow$ Astronomie hat lange zurückreichende Geschichte\\
 $\Longrightarrow$ besonders Auffallende und Spektakuläre Ereignisse tragen Astronomie auch heute noch vorran
 
 \subsection{Zweite Vorlesung}
+\begin{itemize}
+\item Erdatmosphere durchlässig für zwei Frequenzbereiche\\
+$\longrightarrow$ sichtbares Licht und Radiobereich
+\item Infrarot-, Gamma-, Röntgenbereich wird über dem Erdboden absorbiert
+$\longrightarrow$ versch. Methoden der Beobachtung von Flugzeug über Ballon bis Satelliten
+\item Sonne produziert aus Wasserstoff schwerere Elemente\\
+$\longrightarrow$
+\item Oberflächentemperatur beträgt $5800\,\text{°C}$
+\item Temperatur in Korona steigt auf mehrere $10^6\,\text{°C}$\\
+$\longrightarrow$ Energiemäßig möglich da Dichte stark abnimmt\\
+$\longrightarrow$ genauer Prozess unverstanden
+\item unterschiedlich starkes Nachfließen von heißen ganzen aus dem Inneren führen zu gekräuselter Oberfläche
+\item Stellen an denen starke Magnetfelder austreten sind relativ zur Umgebung kälter
+$\longrightarrow$ Sonnenflecken (etwa $4000\,\text{°C}$)
+\item Sonne macht $99,2\,\%$ der Masse unseres Sonnensystems aus
+\item Erkenntnisse über Sonne durch betrachtung in verschiedenen Frequenzbereichen
+\item Erde größter bekannter massiver Planet in unserem System (in anderen Systemen auch Supererden mit 3-4 Erdmassen)
+\item Abstand Sonne Erde ist 1AE ($150\cdot 10^6\,\text{m}$)
+\item äußere Planeten sind Gasriesen\\
+$\longrightarrow$ niedriegere Dichten aber viel größere Volumen
+\item Pluto hat Abstand 40AE zur Sonne
+\item Hinweise auf weitere Planeten da Asteriodenbahnen durch Gravitation unentdeckter Massen beeinflusst werden
+\item Universium sehr leer\\
+$\longrightarrow$ an besonders dichten Stellen 100 Teilchen pro $\text{cm}^3$
+\item Sonnen entstehen wenn an dichten Stellen Teilchen aneinander gepresst werden, z.B durch Supernovae, Sonnenexplosionen
+\item erst Deterium-Brennen da energetisch bevorzugt\\
+$\longrightarrow$ anschließend wird bei fast allen Sternen Heliumbrennen aktiviert (Ausnahme: Braune Zwerge)
+\item unsere Sonne ist ein Hauptreihenstern
+\item Versuche von Spektrallinien auf Temperatur zu schließen sind Fehlgeschlagen, da Annahme, dass Sonne materialtechnisch wie Erde aufgebaut ist, falsch war
+
+\end{itemize}
+
+\textbf{Wichtigste Erkenntnisse:}\\
+$\Longrightarrow$ Zugang zu Objekten im Weltall über Strahlung\\
+$\Longrightarrow$ Übersicht über Planten in unserem Sonnensystem (noch ergänzen)\\
+$\Longrightarrow$ Klassifizieren von Sonnen
