--- a/teil1.tex
+++ b/teil1.tex
@@ -1,6 +1,4 @@
-\section{Historischer Abriss der Astro(teilchen)physik}
-
-\subsection{Erste Vorlesung}
+\section{Erste Vorlesung: Historischer Abriss der Astro(teilchen)physik}
 \begin{itemize}
 \item Astrophysik ist der Teil der Wissenschaft, der am weitesten in die Vergangenheit des Menschen zurück reicht\\
       $\longrightarrow$ Beginn etwa 4000 Jahre v.Chr.
@@ -20,7 +18,7 @@
 $\Longrightarrow$ Astronomie hat lange zurückreichende Geschichte\\
 $\Longrightarrow$ besonders Auffallende und Spektakuläre Ereignisse tragen Astronomie auch heute noch vorran
 
-\subsection{Zweite Vorlesung}
+\section{Zweite Vorlesung: Sonne und Planeten}
 \begin{itemize}
 \item Erdatmosphere durchlässig für zwei Frequenzbereiche\\
 $\longrightarrow$ sichtbares Licht und Radiobereich
