--- a/teil1.tex
+++ b/teil1.tex
@@ -33,9 +33,9 @@ $\longrightarrow$ genauer Prozess unverstanden
 \item unterschiedlich starkes Nachfließen von heißen ganzen aus dem Inneren führen zu gekräuselter Oberfläche
 \item Stellen an denen starke Magnetfelder austreten sind relativ zur Umgebung kälter
 $\longrightarrow$ Sonnenflecken (etwa $4000\,\text{°C}$)
-\item Sonne macht $99,2\,\%$ der Masse unseres Sonnensystems aus
+\item Sonne macht $99,8\,\%$ der Masse unseres Sonnensystems aus
 \item Erkenntnisse über Sonne durch betrachtung in verschiedenen Frequenzbereichen
-\item Erde größter bekannter massiver Planet in unserem System (in anderen Systemen auch Supererden mit 3-4 Erdmassen)
+\item Erde größter bekannter massiver Planet in unserem System (in anderen Systemen auch Supererden mit 3-10 Erdmassen)
 \item Abstand Sonne Erde ist 1AE ($150\cdot 10^6\,\text{m}$)
 \item äußere Planeten sind Gasriesen\\
 $\longrightarrow$ niedriegere Dichten aber viel größere Volumen
@@ -43,7 +43,7 @@ $\longrightarrow$ niedriegere Dichten aber viel größere Volumen
 \item Hinweise auf weitere Planeten da Asteriodenbahnen durch Gravitation unentdeckter Massen beeinflusst werden
 \item Universium sehr leer\\
 $\longrightarrow$ an besonders dichten Stellen 100 Teilchen pro $\text{cm}^3$
-\item Sonnen entstehen wenn an dichten Stellen Teilchen aneinander gepresst werden, z.B durch Supernovae, Sonnenexplosionen
+\item Sterne entstehen wenn an dichten Stellen Teilchen aneinander gepresst werden, z.B durch Supernovae, Sonnenexplosionen
 \item erst Deterium-Brennen da energetisch bevorzugt\\
 $\longrightarrow$ anschließend wird bei fast allen Sternen Heliumbrennen aktiviert (Ausnahme: Braune Zwerge)
 \item unsere Sonne ist ein Hauptreihenstern
